# langchain-rag-app

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
data/: sample.md
src/capital_market_risk_review/: __init__.py  analyze.py  api.py  compliance_agent.py  escalation_agent.py  experience.txt  graph.py  ingest.py  main.py  market_agent.py  models.py  review.py
src/capital_market_risk_review/embedding_process/: README.md  __init__.py  main.py  spark_pipeline.py  vector_backend.py
src/capital_market_risk_review/review_process/: README.md  __init__.py  analyze.py  api.py  compliance_agent.py  escalation_agent.py  graph.py  hitl.py  main.py  market_agent.py  models.py  retrieval.py
src/rag_app/: __init__.py  chain.py  cli.py  config.py  loaders.py  vectorstore.py
src/template/capital_market_risk_review/: DESIGN.md  README.md  analyze.py  compliance_agent.py  escalation_agent.py  experience.txt  graph.py  ingest.py  main.py  market_agent.py  models.py  review.py
