[project]
name = "langchain-rag-app"
version = "0.1.0"
description = "Starter RAG app with LangChain and Chroma"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[project.scripts]
rag-ingest = "rag_app.cli:ingest_main"
rag-query = "rag_app.cli:query_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
