[project]
name = "langchain-rag-app"
version = "1.0.0"
description = "Capital Market Risk Review — multi-agent LangGraph pipeline with FastAPI service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # ── LangChain ────────────────────────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    # ── LangGraph ────────────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    # ── OpenAI ───────────────────────────────────────────────────────────────
    "openai>=1.40.0",
    # ── FastAPI service layer ─────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ── Batch ingestion/embedding (PySpark) ──────────────────────────────────
    # Spark 3.x keeps Java 11 compatibility for local/batch environments.
    "pyspark>=3.5.0,<4.0.0",
    # Keep NumPy/PyArrow ABI-compatible for Spark + local Arrow conversions.
    "numpy>=1.24,<2",
    "pyarrow>=14.0.0,<17",
    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",       # required for FastAPI TestClient
]

[project.scripts]
risk-review-demo = "capital_market_risk_review.review_process.main:main"
embedding-process = "capital_market_risk_review.embedding_process.main:main"
rag-ingest = "rag_app.cli:ingest_main"
rag-query = "rag_app.cli:query_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
